# django-stripe-api-test

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
docker-compose/: app.yaml
src/app/core/: container.py  settings.py  urls.py
src/app/modules/common/: enitites.py  enums.py  exceptions.py  values.py
src/app/modules/common/payments/: payment_gateway.py  stripe_payment_gateway.py
src/app/modules/items/: admin.py  apps.py  enitites.py  models.py  repo.py  values.py  views.py
src/app/modules/items/migrations/: 0001_initial.py
src/app/modules/items/templates/: item.html  item_payment_success.html
src/app/modules/items/use_cases/: buy_item_use_case.py  retrieve_item_use_case.py
src/app/modules/orders/: admin.py  enitites.py  enums.py  models.py  repo.py  values.py  views.py
src/app/modules/orders/migrations/: 0001_initial.py  0002_alter_orderline_order.py  0003_discount_tax_orderdiscount_ordertax.py
src/app/modules/orders/templates/: order.html  order_payment_success.html
src/app/modules/orders/use_cases/: buy_order_use_case.py  retrieve_order_use_case.py
