[project]
name = "django-stripe-api-test"
version = "0.1.0"
description = "Test app using stripe api"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django>=6.0.1",
    "django-environ>=0.12.0",
    "punq>=0.7.0",
    "stripe>=14.1.0",
]

[dependency-groups]
dev = [
    "isort>=7.0.0",
]
